[bdist_wheel]
universal = 1

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[flake8]
ignore = W503
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    pddl/__init__.py,
max-complexity = 10
max-line-length = 120
per-file-ignores =
    pddl/logic/__init__.py:F401

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88


[mypy]
python_version = 3.8
strict_optional = True

# Per-module options:


[mypy-lark]
ignore_missing_imports = True


# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-mistune.*]
ignore_missing_imports = True
